Fri Mar 10 11:44:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Any/Recursive/Test.idl:
        * tests/Any/Recursive/client.cpp:
          Also added a test for a recursive union with no default

Fri Mar 10 10:44:29 GMT 2006  Don Sharp <Donald.Sharp@prismtech.com>

        * orbsvcs/tests/Bug_2377_Regression/Hello.cpp:

          std::string ==> ACE_CString.

Fri Mar 10 10:12:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Transport_Descriptor_Interface.inl:
        * tao/AnyTypeCode/skip.cpp:
          Use true/false

Fri Mar 10 09:27:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Stub.cpp:
          Fixed warning in vc6 build

Fri Mar 10 08:17:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Any/Recursive/client.cpp:
        * tests/Any/Recursive/Test.idl:
          Extended this test with a new test case as described in bug
          2446. This test now fails again because this added test case
          uncovers a new bug. Thanks to Tommy Persson
          <tpe at ida dot liu dot se> for delivering this test case

Fri Mar 10 07:09:22 UTC 2006  J.T. Conklin  <jtc@acorntoolworks.com>

        * tao/...*.cpp:
        * tao/...*.h:
        * tao/...*.i:
        * tao/...*.inl:

          Add "tao/..." prefix to #includes of *.h, *.i, *.inl, and
          template *.cpp files found in ${TAO_ROOT}/tao.

Thu Mar  9 16:04:22 UTC 2006  Simon McQueen  <sm@prismtech.com>

        * TAO_IDL/be/be_visitor_ami_pre_proc.cpp:

          Don't bail out on code generation when the node is imported.

          This fixes bug #2429.

        * orbsvcs/ImplRepo_Service/ImR_Activator_i.cpp:

          Prevent seg faults when the activator has been fed a duff ImR IOR.

          This fixes bug #2445.

Thu Mar  9 15:37:05 UTC 2006  J.T. Conklin  <jtc@acorntoolworks.com>

        * tao/AnyTypeCode/Dynamic.pidl:
        * tao/AnyTypeCode/Dynamic_Parameter.pidl: