@@ -156,9 +156,6 @@ TAO_Hash_Naming_Context::bind (const CosNaming::Name& n,
         }
       ACE_CATCH (CORBA::TIMEOUT, timeoutEx)
         {
-          ACE_PRINT_EXCEPTION (timeoutEx, "Hash_Naming_Context::bind(), Caught CORBA::TIMEOUT exception");
-          // throw a CannotProceed exception back to the client
-          //
           ACE_TRY_THROW (CosNaming::NamingContext::CannotProceed
                          (context.in (), simple_name));
         }
@@ -222,9 +219,6 @@ TAO_Hash_Naming_Context::rebind (const CosNaming::Name& n,
         }
       ACE_CATCH (CORBA::TIMEOUT, timeoutEx)
         {
-          ACE_PRINT_EXCEPTION (timeoutEx, "Hash_Naming_Context::rebind(), Caught CORBA::TIMEOUT exception");
-          // throw a CannotProceed exception back to the client
-          //
           ACE_TRY_THROW (CosNaming::NamingContext::CannotProceed
                          (context.in (), simple_name));
         }
@@ -294,7 +288,6 @@ TAO_Hash_Naming_Context::bind_context (const CosNaming::Name &n,
         }
       ACE_CATCH (CORBA::TIMEOUT, timeoutEx)
         {
-          ACE_PRINT_EXCEPTION (timeoutEx, "Hash_Naming_Context::bind_context (), Caught CORBA::TIMEOUT exception");
           ACE_TRY_THROW (CosNaming::NamingContext::CannotProceed
                          (context.in (), simple_name));
         }
@@ -358,7 +351,6 @@ TAO_Hash_Naming_Context::rebind_context (const CosNaming::Name &n,
         }
       ACE_CATCH (CORBA::TIMEOUT, timeoutEx)
         {
-          ACE_PRINT_EXCEPTION (timeoutEx, "Hash_Naming_Context::rebind_context (), Caught CORBA::TIMEOUT exception");
           ACE_TRY_THROW (CosNaming::NamingContext::CannotProceed
                          (context.in (), simple_name));
         }
@@ -475,9 +467,6 @@ TAO_Hash_Naming_Context::resolve (const CosNaming::Name& n
             }
           ACE_CATCH (CORBA::TIMEOUT, timeoutEx)
             {
-              ACE_PRINT_EXCEPTION (timeoutEx, "Hash_Naming_Context::resolve (), Caught CORBA::TIMEOUT exception");
-              // throw a CannotProceed exception back to the client
-              //
               ACE_TRY_THROW (CosNaming::NamingContext::CannotProceed
                              (context.in (), rest_of_name));
             }
@@ -529,7 +518,6 @@ TAO_Hash_Naming_Context::unbind (const CosNaming::Name& n
         }
       ACE_CATCH (CORBA::TIMEOUT, timeoutEx)
         {
-          ACE_PRINT_EXCEPTION (timeoutEx, "Hash_Naming_Context::unbind (), Caught CORBA::TIMEOUT exception");
           ACE_TRY_THROW (CosNaming::NamingContext::CannotProceed
                          (context.in (), simple_name));
         }
